# nixos-diff

./: README.md  default.nix  meson.build  pkgs.nix  shell.nix  tests.nix
nix/: sources.json
slides/: nix-ug-habrawo.md  shell.nix
src/: main.cc  meson.build  nixos-diff.nix
tests/derivation/: config1.nix  config2.nix  output.diff
tests/flakes/: output.diff
tests/flakes-compat/: output.diff
tests/flakes-compat/1/: flake.nix
tests/flakes-compat/2/: flake.nix
tests/flakes-sysmodule-compat/: output.diff
tests/flakes-sysmodule-compat/1/configs-nixos/example/: configuration.nix
tests/flakes-sysmodule-compat/2/: flake.nix
tests/flakes-sysmodule-compat/2/configs-nixos/example/: configuration.nix
tests/flakes/1/: flake.nix
tests/flakes/2/: flake.nix
tests/nixos-hardware/: config1.nix  config2.nix  facter.json  output.diff
tests/nixos-modules/: config1.nix  config2.nix  output.diff
tests/service/: config1.nix  config2.nix  output.diff
