project('nixos-diff', 'cpp',
  version : '0.1.0',
  license : 'GPL-3.0',
)

boost_dep = dependency('boost', required: true)
dtl_dep = dependency('dtl', required: true)
nix_cmd_dep = dependency('nix-cmd', required: true)
nix_expr_dep = dependency('nix-expr', required: true)
nix_flake_dep = dependency('nix-flake', required: true)
nix_main_dep = dependency('nix-main', required: true)
nix_store_dep = dependency('nix-store', required: true)
nix_util_dep = dependency('nix-util', required: true)
nlohmann_json_dep = dependency('nlohmann_json', required: true)
threads_dep = dependency('threads', required: true)

subdir('src')
